--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
+        text-align: center;
+        background-color: black;
       }
       canvas {
         display: block;
+        margin: 0 auto;
       }
     </style>
     <meta charset="utf-8" />
